# archive

./: CMakeLists.txt
PCOSensicam/: pluginVersion.h.in
PCOSensicam/docs/: pcoSensicam.rst
QCam/: pluginVersion.h.in
QCam/docs/: qCam.rst
USBMotion3XIII/: pluginVersion.h.in
USBMotion3XIII/docs/: usbMotion3XIII.rst
cmake/: plugins_options.cmake  plugins_setup.cmake
